# toolbelt

./: README.md
GPT_Tokenizer/: README.md  pyproject.toml  tokenizer.py
Notetakers/: README.md  config.py.example  stdin-notetaker.py  vim-notetaker.py
PDF-extract/: README.md  pdfextract.py  pyproject.toml  requirements.txt
WebScraper/: README.md  article_scraper.py  pyproject.toml
YoutubeTranscript/: README.md  getyt.py  pyproject.toml  pyproject.toml.bak
